--- a/configure.ac
+++ b/configure.ac
@@ -40,7 +40,7 @@ fi
 
 # Checks for library functions.
 AC_FUNC_ERROR_AT_LINE
-AC_CHECK_FUNCS([clock_gettime memchr memmove strtoul strtoull])
+AC_CHECK_FUNCS([clock_gettime memchr memmove strtoul strtoull mach_absolute_time])
 
 AC_CONFIG_FILES([Makefile
                  libe.pc])
